--- a/PasswordManager/pom.xml
+++ b/PasswordManager/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.36.0.3</version> <!-- Check for latest version if needed -->
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE230</version>
+        </dependency>
     </dependencies>
 </project>
